# Amazon_Search_Ranking

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: eval.yaml  reranker.yaml  retrieval.yaml  train.yaml
notebooks/: inference_esci_reranker.ipynb  inference_esci_two_tower.ipynb  inference_multi_task_reranker.ipynb  inference_reranker.ipynb  load_data.ipynb  load_esci_data.ipynb  train_esci_reranker.ipynb  train_esci_two_tower.ipynb  train_multi_task_reranker.ipynb  train_reranker.ipynb
src/: __init__.py  constants.py  utils.py
src/api/: main.py
src/data/: __init__.py  download_esci.py  load_data.py  load_esci.py  prepare_esci.py  utils.py
src/eval/: __init__.py  esci_evaluator.py  eval_reranker.py  evaluate.py  evaluator.py  metrics.py
src/inference/: infer_reranker.py
src/models/: __init__.py  multi_task_reranker.py  reranker.py  retriever.py  two_tower.py
src/retrieval/: __init__.py  build_index.py  query.py
src/training/: __init__.py  loss.py  train.py  train_multi_task_reranker.py  train_reranker.py  train_retrieve.py
tests/: test_constants.py  test_data_utils.py  test_esci_evaluator.py  test_load_data.py
