[project]
name = "amazon-search-retrieval"
version = "0.1.0"
description = "Two-tower embedding model for product search using Amazon ESCI dataset (Instacart ITEMS-style)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
